updating our details

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello, I've worked in video production for the past 8 years since I graduated from Full Sail, and I still work in the field and want to switch careers into coding.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Tampa Florida.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video Games, D&D, and watching sports and streaming.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Running my own business.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Orlando FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Honestly my current career is proving to began to change as technology improves, and I use to be very into coding before I made the switch to Film School. I want to make a carreer change and this career doesn't seem to be going anywhere.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/Nickpodski">Github</a></li>
         </ul>
     </footer>
 </body>
