updating my details, typo correction

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Orlando FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Honestly my current career is proving to began to change as technology improves, and I use to be very into coding before I made the switch to Film School. I want to make a carreer change and this career doesn't seem to be going anywhere.</p>
+      <p>Honestly my current career is proving to change as technology improves, and I use to be very into coding before I made the switch to Film School. I want to make a carreer change and this career doesn't seem to be going anywhere.</p>
     </section>
 
     <footer id="footer">
